# bpc-fetch

./: .cli-health-ignore  .gitignore  LICENSE  Makefile  README.md  README_CN.md  pyproject.toml
data/: sites.js  sites_cache.json
packaging/: build_win.py
src/bpc_fetch/: __init__.py  __main__.py  browser.py  cli.py  crawl.py  discover.py  extract.py  history.py  search.py  sites.py  strategy.py
