[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpc-fetch"
version = "0.1.0"
description = "Bypass paywall sites: search, discover, and fetch articles as markdown"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "trafilatura>=2.0",
    "markdownify>=0.14",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
]

[project.scripts]
bpc-fetch = "bpc_fetch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bpc_fetch"]
